Fix map height on larger screens when collapsing chat/moves

--- a/app/assets/stylesheets/game.scss
+++ b/app/assets/stylesheets/game.scss
@@ -96,7 +96,7 @@
 }
 
 .game-chat-collapse {
-  height: 3.75em;
+  height: 40px;
 }
 
 .game-page-moves {
@@ -126,7 +126,7 @@
 }
 
 .move-output-collapse {
-  height: 3.75em;
+  height: 40px;
 }
 
 .move-output-record {
